src/index.css
@import "open-props/shadows";
@import "open-props/easings";
@import "open-props/animations";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .animation-delay-200 {
    animation-delay: 200ms;
  }

  .animation-delay-300 {
    animation-delay: 300ms;
  }

  .animation-delay-400 {
    animation-delay: 400ms;
  }

  .animation-delay-500 {
    animation-delay: 500ms;
  }

  .animation-delay-600 {
    animation-delay: 600ms;
  }

  .animation-delay-700 {
    animation-delay: 700ms;
  }

  .animation-delay-800 {
    animation-delay: 800ms;
  }

  .animation-delay-900 {
    animation-delay: 900ms;
  }

  .animation-delay-1100 {
    animation-delay: 1100ms;
  }

  .animation-delay-1000 {
    animation-delay: 1000ms;
  }

  .animation-delay-2000 {
    animation-delay: 2s;
  }

  .animation-delay-4000 {
    animation-delay: 4s;
  }

  .reset {
    margin: 0 !important;
    padding: 0 !important;
  }
}

/* GLOBAL */
:root {
  --dark-text: #374151;
  --dark-border: #1f2937;
  --pink-300: 249, 168, 212;
  --palevioletred: 219, 112, 147;
}

body {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  scrollbar-width: thin;
}

/* SCROLLBAR */

/* ::-webkit-scrollbar { */
/*   width: 16px; */
/* } */
/**/
/* ::-webkit-scrollbar-thumb { */
/*   background-clip: content-box; */
/*   background-color: #999; */
/*   border: 5px solid transparent; */
/*   border-radius: 20px; */
/*   transition: background-color 500ms ease-in-out; */
/* } */
/**/
/* ::-webkit-scrollbar-track { */
/*   background-color: transparent; */
/*   transition: background-color 500ms ease-in-out; */
/* } */
/**/
/* html.dark ::-webkit-scrollbar-thumb { */
/*   background-color: #aaa; */
/* } */
/**/
/* html.dark ::-webkit-scrollbar-track { */
/*   background-color: #0e141b; */
/* } */

/* NAV */

ul a {
  display: inline-block;
  transform: perspective(1px) translateZ(0);
  position: relative;
  overflow: hidden;
}

ul a:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 100%;
  bottom: 0;
  background: rgba(var(--pink-300), 1);
  height: 5px;
  transition-property: right;
  transition-duration: 250ms;
  transition-timing-function: cubic-bezier(0.28, -0.4, 2.32, 1.6);
}

ul a:hover:before,
ul a:focus:before,
ul a:active:before {
  right: 0;
}

html[class="dark"] ul a:before {
  background: rgba(var(--palevioletred), 1);
}

/* BLOG POST */

.card-description p,
.card-description blockquote {
  @apply line-clamp-4;
}

.prose h1,
.prose h2,
.prose h3,
.prose h4 {
  @apply scroll-mt-8;
}

@media screen and (min-width: 1890px) {
  .prose nav.toc li {
    @apply max-w-xs overflow-ellipsis;
  }
}

.prose h1:has(.icon.icon-link):hover .icon.icon-link:before,
.prose h2:has(.icon.icon-link):hover .icon.icon-link:before,
.prose h3:has(.icon.icon-link):hover .icon.icon-link:before,
.prose h4:has(.icon.icon-link):hover .icon.icon-link:before {
  opacity: 0.25;
  transition: all 250ms ease-in-out;
}

.prose .icon.icon-link:before {
  content: "#";
  position: absolute;
  opacity: 0;
  transform: translateX(-40px);

  @apply group-hover:opacity-25;
}

.prose li {
  word-break: break-word !important;
}

.prose pre,
.prose code {
  word-break: break-all !important;
}

.prose pre {
  @apply !max-w-none !w-full;
}

.dark .dark\:prose-dark pre code {
  background-color: transparent !important;
}

.dark .dark\:prose-dark p a:not(.border-underline-grow) {
  color: rgba(var(--palevioletred), 1);
  text-decoration: underline;
}

.prose a:not(.border-underline-grow) {
  color: rgba(var(--palevioletred), 1);
  text-decoration: underline;
}

.prose summary {
  list-style: none;
  position: relative;
  margin-left: 20px;
}

.prose summary::before {
  content: "👉 ";
  height: 38px;
  width: 27px;

  position: absolute;
  left: -30px;
  transform: rotate(0);
  transform-origin: 14px 19px;
  transition: all 250ms ease-in-out;
}

.prose details[open] summary::before {
  transform: rotate(90deg);
}

.prose img {
  width: 100%;
  height: auto;
}

.prose pre>code>span>span:first-of-type {
  user-select: none;
}

/* INTRO */

.intro-title {
  position: absolute;
  left: 0;
  top: -30px;
}

.mask-bottom-strong {
  mask-image: linear-gradient(to bottom,
      hsl(0, 0%, 0%) 0%,
      hsla(0, 0%, 0%, 0.738) 19%,
      hsla(0, 0%, 0%, 0.541) 34%,
      hsla(0, 0%, 0%, 0.382) 47%,
      hsla(0, 0%, 0%, 0.278) 56.5%,
      hsla(0, 0%, 0%, 0.194) 65%,
      hsla(0, 0%, 0%, 0.126) 73%,
      hsla(0, 0%, 0%, 0.075) 80.2%,
      hsla(0, 0%, 0%, 0.042) 86.1%,
      hsla(0, 0%, 0%, 0.021) 91%,
      hsla(0, 0%, 0%, 0.008) 95.2%,
      hsla(0, 0%, 0%, 0.002) 98.2%,
      hsla(0, 0%, 0%, 0) 100%);
}

html.dark .js_darkmode_flicker {
  --primary: rgba(221, 119, 153, 0.455);
  color: rgb(255, 255, 255);
  text-shadow:
    0 0 0.033em rgb(255, 255, 255),
    0 0 0.08em #fff,
    0 0 0.1em var(--primary),
    0 0 0.2em var(--primary),
    0 0 0.3em var(--primary),
    0 0 1em var(--primary);
}

@keyframes staggeredLines {
  0% {
    opacity: 0;
    transform: translateY(50px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.border-underline-grow {
  display: inline-block;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  text-decoration: none;
}

.border-underline-grow:before {
  content: "";
  position: absolute;
  bottom: 0;
  z-index: -1;
  height: 100%;
  max-height: 9px;
  width: 100%;
  background: rgba(var(--pink-300), 0.7);
  transform: scaleY(0.4);
  transition-property: max-height, transform;
  transition-duration: 0.5s;
  transition-timing-function: ease-out;
}

html[class="dark"] .border-underline-grow:before {
  background: rgba(var(--palevioletred), 1);
}

html[class="dark"] .border-underline-grow:hover,
html[class="dark"] .border-underline-grow:focus,
html[class="dark"] .border-underline-grow:active {
  color: white;
}
/* ... */

